2014-11-19  Jean-Louis Martineau <martineau@zmanda.com>
	* Makefile.am: Add '-I /usr/share/aclocal' to ACLOCAL_AMFLAGS

2014-11-12  Jean-Louis Martineau <martineau@zmanda.com>
	* autogen: Add "-I /usr/share/aclocal" to includes

2014-11-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Fix perl warning.

2014-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/filter-process.c (get_err_fd): Remove prototype.
	* xfer-src/xfer-element.h (get_err_fd): Add prototype.
	* perl/Amanda/Cmdline.swg: #include "match.h"

2014-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix BROKEN-DRIVE-LOADED-SLOT.

2014-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm (print_to_server): Print enssage to debug
	  file.

2014-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix BROKEN-DRIVE-LOADED-SLOT.
	* installcheck/Amanda_Changer_robot.pl: Fix test.

2014-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Add a BROKEN-DRIVE-LOADED-SLOT
	  property.
	* man/xml-source/amanda-changers.7.xml: Document it.

2014-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amrmtape.pl: Fix diskpath.

2014-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Generate an error if fopen of config fail.

2014-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amrmtape.pl: Do not call amtrmidx if running a job.
	* server-src/amtrmidx.c: Do not delete index file newer than 7 days.
	* installcheck/amrmtape.pl: Fix check.

2014-11-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm (do) : Set action with special command.

2014-11-03  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: Fix hang on eof.

2014-10-29  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ambsdtar.c: Handle 'x ' lines on stderr for bsdtar
	  restore.
